# ithaca

./: .clang-format  .gitignore  .ocamlformat  README.md  dune-project  integration-index  integration-test  ithaca  ithaca_json_store
.github/workflows/: ci.yml
opam/: ithaca.opam  ithaca.opam.template
src/atd/: db.atd  distributed.atd  dune  profile.atd  search.atd  stored_hashes.atd  wav.atd
src/benchmark/: benchmarks.ml  dune
src/lib/args/: args.ml  args.mli  dune
src/lib/audio/: audio.ml  audio.mli  dune  hashes.ml  hashes.mli  quads.ml  quads.mli
src/lib/db/: db.ml  db.mli  dune  profile.ml  profile.mli
src/lib/fcqt/: dune  fcqt.ml  fcqt.mli
src/lib/integration/: dune  ffmpeg.ml  fingerprint_test.ml  index.ml  ithaca_ops.ml  manifest.ml  progress.ml  sample.ml  shell.ml  stats.ml
src/lib/json/: dune  json_store.ml  json_store.mli
src/lib/lmdb/: dune  lmdb_store.ml  lmdb_store.mli  lmdb_stubs.c
src/lib/search/: dune  search.ml  search.mli  search_map.ml  search_map.mli
src/lib/store/: consolidate.ml  consolidate.mli  dune  store.ml  store.mli
src/utils/: dune  float_buffer.ml  float_buffer.mli  iStream.ml  iStream.mli  ringbuffer.ml  ringbuffer.mli  wav.ml  wav.mli  wav_c.c
test/: db_tests.ml  dune  fcqt_shift.ml  fcqt_tests.ml  float_buffer_tests.ml  hashes_tests.ml  integration_test.ml  quads_tests.ml  ringbuffer_tests.ml  runner.ml  search_tests.ml  store_tests.ml
