(library
 (name ithaca_atd)
 (wrapped false)
 (libraries atdgen-runtime))

(rule
 (targets wav_t.ml wav_t.mli)
 (deps wav.atd)
 (action
  (run atdgen -t %{deps})))

(rule
 (targets wav_j.ml wav_j.mli)
 (deps wav.atd)
 (action
  (run atdgen -j %{deps})))

(rule
 (targets stored_hashes_t.ml stored_hashes_t.mli)
 (deps stored_hashes.atd)
 (action
  (run atdgen -t %{deps})))

(rule
 (targets stored_hashes_j.ml stored_hashes_j.mli)
 (deps stored_hashes.atd)
 (action
  (run atdgen -j %{deps})))

(rule
 (targets profile_t.ml profile_t.mli)
 (deps profile.atd)
 (action
  (run atdgen -t %{deps})))

(rule
 (targets profile_j.ml profile_j.mli)
 (deps profile.atd)
 (action
  (run atdgen -j %{deps})))

(rule
 (targets profile_b.ml profile_b.mli)
 (deps profile.atd)
 (action
  (run atdgen -b %{deps})))

(rule
 (targets search_t.ml search_t.mli)
 (deps search.atd)
 (action
  (run atdgen -t %{deps})))

(rule
 (targets search_j.ml search_j.mli)
 (deps search.atd)
 (action
  (run atdgen -j %{deps})))

(rule
 (targets distributed_t.ml distributed_t.mli)
 (deps distributed.atd)
 (action
  (run atdgen -t %{deps})))

(rule
 (targets distributed_j.ml distributed_j.mli)
 (deps distributed.atd)
 (action
  (run atdgen -j %{deps})))
