(library
 (name ithaca_utils)
 (wrapped false)
 (libraries ithaca_atd unix)
 (foreign_stubs
  (language c)
  (names wav_c)
  (flags
   (:standard -fPIC -O3))))

(rule
 (alias fmt)
 (enabled_if %{bin-available:clang-format})
 (deps wav_c.c)
 (action
  (progn
   (with-stdout-to
    wav_c.c.formatted
    (run clang-format wav_c.c))
   (diff wav_c.c wav_c.c.formatted))))
